--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -48,7 +48,7 @@
     "followUs": "تابعنا",
     "allRightsReserved": "جميع الحقوق محفوظة.",
     "designDevelopedBy": "تم التصميم والتطوير بواسطة",
-    "moneyLeek": "ماني ليك"
+    "moneyLeek": "بريميدوس"
   },
 
   "about": {
