--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -13,7 +13,7 @@
   "footer": {
     "altText": "MONZA Rent a Car",
     "title": "MONZA Rent a Car",
-    "moneyLeek": " Money Leek",
+    "moneyLeek": "PrimedIos",
     "description": "MONZA Luxury Car Rental Dubai professional Sports Car Rental Service. Customer well-being, satisfaction, and choice are our extreme priority.",
     "usefulLinks": {
       "title": "Useful Links",
