--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -20,23 +20,20 @@
         "الرئيسية",
         "من نحن",
         " الفئات",
-        " العلامات التجارية",
+        "  جميع الخدمات",
         "اتصل بنا"
       ]
     },
     "categories": {
       "title": "الفئات",
       "items": [
-        "سيارة معدلة",
-        "سيارة دفع رباعي",
-        "سيارة قابلة للتحويل",
-        "سيارة اقتصادية",
-        "سيارة رياضية"
+      "          تصميم واردبريس",
+      " الفئات"
       ]
     },
     "ourServices": {
-      "title": " أخر المقالات ",
-      "items": ["   تجربه  ", "تجربه", "تجربه ", " تجربه"]
+      "title": "  خدماتنا ",
+      "items": ["   برمجه خاصه  ", "  تصميم مواقع  ", "  تصميم بروفايل ", "           تصميم واردبريس"]
     },
     "support": {
       "title": "الدعم",
