--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -21,7 +21,7 @@
         "Home",
         "About Us",
         "Categories",
-        "All Brands",
+        "All Services",
         "Contact Us"
       ]
     },
